--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -25,6 +25,21 @@
     font-family: Arial, Helvetica, sans-serif;
   }
 
+  .title-logo {
+    font-family: 'Bebas Neue', cursive;
+    font-size: 60px;
+    text-align: right;
+  }
+
+  .title-logo::first-letter {
+    color: #C1A788;
+  }
+
+  .help-button, .user-button {
+    font-family: 'Work Sans', sans-serif !important;
+    font-weight: bold !important;
+  } 
+
   /* header style */
   .header-container {
     position: fixed;
@@ -40,6 +55,7 @@
   .header-button .w3-button:hover {
     background-color:#F5F3EC !important; 
     color:#665848 !important;
+    font-family: 'Work Sans', sans-serif !important;
   }
 
   .header-left .w3-display-container {
@@ -235,19 +251,7 @@
   transition: max-height 0.2s ease-out;
 }
 
- .title-logo {
-  font-family: 'Bebas Neue', cursive;
-  font-size: 60px;
-  text-align: right;
- }
-
- .title-logo::first-letter {
-   color: #C1A788;
- }
-
- .help-button, .user-button {
-   font-family: 'Work Sans', sans-serif;
- } 
+ 
 
 </style>
 
