Update user button

--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -35,7 +35,7 @@
     color: #C1A788;
   }
 
-  .help-button, .user-button {
+  .help-button, .login-button {
     font-family: 'Work Sans', sans-serif !important;
     font-weight: bold !important;
   } 
@@ -55,6 +55,9 @@
   .header-button .w3-button:hover {
     background-color:#F5F3EC !important; 
     color:#665848 !important;
+  }
+
+  .header-text-button .w3-button {
     font-family: 'Work Sans', sans-serif !important;
   }
 
@@ -82,7 +85,12 @@
 
   .logout-dropdown {
     right:0;
-    width: 100px;
+    min-width: 160px;
+  }
+
+  .logout-dropdown hr {
+    border: 1px solid #dddddd;
+    margin: 0px;
   }
 
   .w3-bar-block .w3-bar-item {
@@ -277,7 +285,7 @@
         <div class="menu-item w3-display-container w3-hide-medium w3-hide-small">
           <div class="menu-item-left w3-display-left">
             <div class="w3-dropdown-hover w3-theme">
-              <div class="header-button">
+              <div class="header-button header-text-button">
                 <button class="w3-button w3-theme-b1"><h4 class="help-button">Help <i class="fa fa-caret-down"></i></h4></button>
               </div>
               <div class="help-dropdown list-item w3-dropdown-content w3-bar-block w3-card-4">
@@ -293,15 +301,19 @@
             {% if user.is_authenticated %}
             <div class="w3-dropdown-hover w3-theme">
               <div class="header-button">
-                <button class="w3-button w3-theme-b1"><h4 class="user-button">{{ user.get_username }} <i class="fa fa-caret-down"></i></h4></button>
+                <button class="w3-button">
+                  <h4><i class="fas fa-user-circle fa-lg"></i> <i class="fa fa-caret-down"></i></h4>
+                </button>
               </div>
               <div class="logout-dropdown list-item w3-dropdown-content w3-bar-block w3-card-4">
+                <p class="w3-bar-item w3-padding"><b>Signed in as: </b>{{ user.get_username }}</p>
+                <hr>
                 <a href="{% url 'account_logout' %}?next={% url 'index' %}" class="w3-bar-item w3-button w3-padding">Logout</a>
               </div>
             </div>
             {% else %}
-            <div class="header-button">
-              <a href="{% url 'account_login' %}?next={{request.path}}" class="w3-button w3-theme-b1"><h4>Login</h4></a>
+            <div class="header-button header-text-button">
+              <a href="{% url 'account_login' %}?next={{request.path}}" class="w3-button w3-theme-b1"><h4 class="login-button">Login</h4></a>
             </div>
             {% endif %}
           </div>
