--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -46,6 +46,8 @@
     top: 0;
     width: 100%;
     height: 100px;
+    /* TODO: padding should start working when the w3-containers are fixed in frontend */
+    padding: 0px 16px !important;
   }
 
   .header {
@@ -62,7 +64,15 @@
   }
 
   .header-left .w3-display-container {
-    width: 220px;
+    min-width: 110px;
+  }
+
+  .header-left .header-button {
+    margin: 33px 10px !important;
+  }
+
+  .header-left .w3-container {
+    padding-left: 4px !important;
   }
 
   .header-right {
@@ -103,7 +113,7 @@
   }
 
   .page-container {
-    margin-top: 100px;
+    margin-top: 100px !important;
     padding: 0;
     }
 
@@ -145,7 +155,7 @@
   .content {
     margin: auto;
     max-width: 900px;
-    padding: 50px 32px;
+    padding: 50px 32px !important;
   }
 
 /* old css belove to be deleted or edited */
@@ -271,11 +281,11 @@
 <div class="header-container w3-container w3-theme">
   <div class="header w3-display-container">
     <div class="header-left w3-display-left">
-      <div class="w3-display-container">
-        <div class="w3-display-left header-button">
+      <div class="w3-container">
+        <div class="header-button w3-left">
           <i class="fa fa-bars w3-button w3-theme-b1 w3-hide-large w3-xlarge w3-bar-item" onclick="w3_open()"></i>
         </div>
-        <div class="w3-display-right">
+        <div class="w3-left">
           <h2 class="title-logo">RNames</h2>
         </div>
       </div>
