Fix w3-container css in wizard

--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -118,7 +118,7 @@
 
   .page-container {
     margin-top: 100px !important;
-    padding: 0;
+    padding: 0 !important;
     }
 
   /* - 100px comes from header-container height being 100px and padding 70px comes from footer height + 20px */
@@ -386,14 +386,6 @@
  -->
   
 </div>
-
-
-<!--
-Linkki home-sivulle
-
-<li><a href="{% url 'index' %}"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Home</a></li>
-
--->
 
 
 
