Add headlines to pages under rnames_app/templates

--- a/app/rnames_app/templates/name_detail.html
+++ b/app/rnames_app/templates/name_detail.html
@@ -14,7 +14,7 @@
             <h2>RNames - Name: {{ name.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <caption>Name: {{ name.id }}</caption>
+          <h1>Name: {{ name.id }}</h1>
           <tr>
             <th>Name</th>
             <td>{{ name.name }}</td>
