--- a/app/rnames_app/templates/qualifier_detail.html
+++ b/app/rnames_app/templates/qualifier_detail.html
@@ -14,7 +14,7 @@
           <h2>RNames - Qualifier: {{ qualifier.id }}</h2>
        </header>
       <table class="w3-table-all">
-        <caption>Qualifier: {{ qualifier.id }}</caption>
+        <h1>Qualifier: {{ qualifier.id }}</h1>
         <tr>
           <th>Qualifier Name</th>
           <td>{{ qualifier.qualifier_name }}</td>
