--- a/app/rnames_app/templates/qualifiername_detail.html
+++ b/app/rnames_app/templates/qualifiername_detail.html
@@ -14,7 +14,7 @@
             <h2>RNames - Qualifier Name: {{ qualifiername.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <caption>Qualifier Name: {{ qualifiername.id }}</caption>
+          <h1>Qualifier Name: {{ qualifiername.id }}</h1>
           <tr>
             <th>Name</th>
             <td>{{ qualifiername.name }}</td>
