--- a/app/rnames_app/templates/stratigraphic_qualifier_detail.html
+++ b/app/rnames_app/templates/stratigraphic_qualifier_detail.html
@@ -14,7 +14,7 @@
            <h2>RNames - Stratigraphic Qualifier: {{ stratigraphicqualifier.id }}</h2>
         </header>
         <table class="w3-table-all">
-          <caption>Stratigraphic Qualifier: {{ stratigraphicqualifier.id }}</caption>
+          <h1>Stratigraphic Qualifier: {{ stratigraphicqualifier.id }}</h1>
           <tr>
             <th>Name</th>
             <td>{{ stratigraphicqualifier.name }}</td>
