--- a/app/rnames_app/templates/structuredname_detail.html
+++ b/app/rnames_app/templates/structuredname_detail.html
@@ -15,7 +15,7 @@
     <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
   </header>
   <table class="w3-table-all">
-    <caption>Structured Name: {{ structuredname.id }}</caption>
+    <h1>Structured Name: {{ structuredname.id }}</h1>
     <tr>
       <th>Name</th>
       <td>{{ structuredname.name }}</td>
