--- a/app/rnames_app/templates/timeslice_detail.html
+++ b/app/rnames_app/templates/timeslice_detail.html
@@ -14,7 +14,7 @@
             <h2>RNames - Time Slice: {{ timeslice.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <caption>Time Slice: {{ timeslice.id }}</caption>
+          <h1>Time Slice: {{ timeslice.id }}</h1>
           <tr>
             <th>Scheme</th>
             <td>{{ timeslice.scheme }}</td>
