--- a/app/rnames_app/templates/help.html
+++ b/app/rnames_app/templates/help.html
@@ -9,7 +9,7 @@
             <h2>RNames - Help</h2>
          </header>
         <table class="w3-table-all">
-          <caption>Help</caption>
+          <h1>Help</h1>
           <tr><td><a href="{% url 'help-faq' %}">FAQ</a></td></th></tr>
           <tr><td><a href="{% url 'help-database-structure' %}">Database Structure</a></th></tr>
           {% if user.is_authenticated %}
