--- a/app/rnames_app/templates/reference_relation_edit.html
+++ b/app/rnames_app/templates/reference_relation_edit.html
@@ -6,6 +6,7 @@
 <header class="w3-hide">
    <h2>RNames - Reference</h2>
 </header>
+<h1>Add relations to structured name {{name_one.name}}</h1>
 <!-- Write your comments here -->
 <section class="w3-section">
   <table class="w3-table-all">
