--- a/app/rnames_app/templates/reference_sturctured_name_edit.html
+++ b/app/rnames_app/templates/reference_sturctured_name_edit.html
@@ -9,6 +9,7 @@
 {% block content %}
 <!-- Write your comments here -->
   <article>
+      <h1>Add structured name to reference {{reference.id}}</h1>
       {% if user.is_authenticated %}
       <div class="w3-teal">
 <!--        <h2>Add Structured Name</h2>-->
