--- a/app/rnames_app/templates/rnames_detail.html
+++ b/app/rnames_app/templates/rnames_detail.html
@@ -3,6 +3,7 @@
 
 {% block content %}
 <!-- Write your comments here -->
+<h1>More about RNames</h1>
 <article>
   Combined with an r-code (which will be published separately) the database is a tool to construct a list of names that are considered to be time equivalent in a certain framework. The algorithm of the correlation is based on explicit rules (e.g., "use the most actual opinion" or "use the best compromise between existing opinions").
 
