--- a/app/rnames_app/templates/select_structured_name.html
+++ b/app/rnames_app/templates/select_structured_name.html
@@ -5,6 +5,7 @@
   {% load static %}
   <!-- Beginning of homepage content -->
   <section class="w3-content">
+    <h1>Select Structured Name</h1>
     <h3 class = "w3-teal">Enter search criteria and press "Search". Click row to select value.</h3>
     <form action="" method="get">
       {% csrf_token %}
