--- a/app/rnames_app/templates/timeslice_list.html
+++ b/app/rnames_app/templates/timeslice_list.html
@@ -5,6 +5,7 @@
 
   <!-- Write your comments here -->
   <article>
+    <h1>Time Slices</h1>
     <form action="" method="get">
         {{ filter.form.as_p }}
         <button type="submit" class="w3-button w3-border w3-hover-light-grey"><i class="fas fa-search"> Search</i></button>
