--- a/app/rnames_app/templates/location_detail.html
+++ b/app/rnames_app/templates/location_detail.html
@@ -14,7 +14,7 @@
             <h2>RNames - Location: {{ location.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <caption>Location: {{ location.id }}</caption>
+          <h1>Location: {{ location.id }}</h1>
           <tr>
             <th>Location</th>
             <td>{{ location.name }}</td>
