--- a/app/rnames_app/templates/reference_detail.html
+++ b/app/rnames_app/templates/reference_detail.html
@@ -12,7 +12,7 @@
   {% endif %}
   <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
   <table class="w3-table-all">
-    <caption>Reference #{{ reference.id }}</caption>
+    <h1>Reference #{{ reference.id }}</h1>
     <tr>
       <th>First Author</th>
       <td>{{ reference.first_author }}</td>
