--- a/app/rnames_app/templates/relation_detail.html
+++ b/app/rnames_app/templates/relation_detail.html
@@ -14,7 +14,7 @@
            <h2>RNames - Relation: {{ relation.id }}</h2>
         </header>
         <table class="w3-table-all">
-          <caption>Relation: {{ relation.id }}</caption>
+          <h1>Relation: {{ relation.id }}</h1>
           <tr>
             <th>Name 1</th>
             <td>{{ relation.name_one }}</td>
