--- a/app/rnames_app/templates/relation_list.html
+++ b/app/rnames_app/templates/relation_list.html
@@ -4,6 +4,7 @@
 {% block content %}
 <!-- Write your comments here -->
 <article class="w3-content">
+  <h1>Relations</h1>
   <form action="" method="get">
       {{ filter.form.as_p }}
       <button type="submit" class="w3-button w3-border w3-hover-light-grey"><i class="fas fa-search"> Search</i></button>
