Add h1 headline to logged_out.html

--- a/app/templates/registration/logged_out.html
+++ b/app/templates/registration/logged_out.html
@@ -2,7 +2,7 @@
 
 {% block nav %}
 <!-- Write your comments here -->
-<p>Logged out!</p>
+<h1>Logged out!</h1>
 
 <a href="{% url 'login'%}">Click here to login again.</a>
 {% endblock %}
