Fix faq not showing correctly

--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -265,7 +265,7 @@
 }
 
 .faq .content {
-  padding: 0 18px;
+  padding: 0 18px !important;
   background-color: white;
   max-height: 0;
   overflow: hidden;
