--- a/app/rnames_app/templates/rnames_app/qualifiername_confirm_delete.html
+++ b/app/rnames_app/templates/rnames_app/qualifiername_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %} {% block content %}
 <!-- Write your comments here -->
 {% if user.is_authenticated %}
-  <h1>Delete Name</h1>
+  <h1>Delete Qualifier Name</h1>
 
   <p>Are you sure you want to delete the Qualifier Name: <b><i>{{ qualifiername }}</i></b>?</p>
 
