--- a/app/rnames_app/templates/help_instruction.html
+++ b/app/rnames_app/templates/help_instruction.html
@@ -59,7 +59,7 @@
           </ol>
         </li>
       </ol>
-      <p class="w3-center"><img src="{% static "images/corrschemed.png" %}" alt="" /></p>
+      <p class="w3-center w3-image"><img src="{% static "images/corrschemed.png" %}" alt="" /></p>
    </div>
 </article>
 <!-- End of RNames help Database Structure-->
