Rename edit and delete buttons

--- a/app/rnames_app/templates/qualifier_edit.html
+++ b/app/rnames_app/templates/qualifier_edit.html
@@ -8,7 +8,7 @@
       <h2>Edit Qualifier</h2>
       <form method="POST" class="qualifier-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button>
+        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px">Cancel</button>
         <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
       </form>
     {% else %}
