--- a/app/rnames_app/templates/name_edit.html
+++ b/app/rnames_app/templates/name_edit.html
@@ -11,7 +11,7 @@
       <form method="POST" novalidate>
         {% csrf_token %}
         {% include 'includes/w3c-form.html' with form=form %}
-        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button>
+        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px">Cancel</button>
         <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
       </form>
     {% else %}
