--- a/app/rnames_app/templates/relation_edit.html
+++ b/app/rnames_app/templates/relation_edit.html
@@ -15,7 +15,7 @@
         <table class="w3-table-all">
           {{ form.as_table }}
         </table>
-        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button>
+        <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px">Cancel</button>
         <button type="submit" class="w3-button w3-border w3-light-grey" style="width:120px">Submit &nbsp; <i class="fas fa-angle-right"></i></button>      
       </form>
 <!--      <form method="POST" class="relation-form">{% csrf_token %}
