--- a/app/rnames_app/templates/rnames_app/relation_confirm_delete.html
+++ b/app/rnames_app/templates/rnames_app/relation_confirm_delete.html
@@ -11,8 +11,8 @@
     {% csrf_token %}
     <input type="submit" action="" value="Yes, delete." />
   </form>
-  <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
-{% else %}
+  <button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px">Cancel</button>
+  {% else %}
   <p><a href="{% url 'account_login'%}?next={{request.path}}">Please login first</a></p>
 {% endif %}
 
