--- a/app/rnames_app/templates/relation_sql_detail.html
+++ b/app/rnames_app/templates/relation_sql_detail.html
@@ -14,7 +14,7 @@
            <h2>RNames - Relation: {{ relation.id }}</h2>
         </header>
         <table class="w3-table-all">
-          <caption>Relation #{{ relation.id }}</caption>
+          <caption><h1>Relation #{{ relation.id }}</h1></caption>
           <tr>
             <th>Name 1</th>
             <td>{{ relation.name_one }}</td>
@@ -35,7 +35,7 @@
        <h2>RNames - Relation #{{ relation.id }}: List of References</h2>
     </header>
     <table class="w3-table-all">
-      <caption>Relation #{{ relation.id }}: List of References</caption>
+      <caption><h2>Relation #{{ relation.id }}: List of References</h2></caption>
         <tr>
           <th>First Author</th>
           <th>Year</th>
