--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -155,6 +155,10 @@
     margin-left:250px;
   }
 
+  .main-content caption {
+    text-align: left;
+  }
+
   .content {
     margin: auto;
     max-width: 900px;
