relocate the buttons

--- a/app/rnames_app/templates/qualifiername_detail.html
+++ b/app/rnames_app/templates/qualifiername_detail.html
@@ -5,16 +5,20 @@
 <!-- Write your comments here -->
 <article>
     <div class="qualifiername">
-        {% if user.is_authenticated %}
-          <a href="{% url 'qualifiername-edit' pk=qualifiername.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a href="{% url 'qualifiername-delete' pk=qualifiername.pk %}"><span class="fa  fa-trash-o"></span></a>
-        {% endif %}
         <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
         <header class="w3-hide">
             <h2>RNames - Qualifier Name: {{ qualifiername.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <h1>Qualifier Name: {{ qualifiername.id }}</h1>
+          <div>
+            <h1 class="w3-left">Qualifier Name: {{ qualifiername.id }}</h1>
+            <p class="w3-right icons">
+              {% if user.is_authenticated %}
+              <a href="{% url 'qualifiername-edit' pk=qualifiername.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+              <a href="{% url 'qualifiername-delete' pk=qualifiername.pk %}"><span class="fa  fa-trash-o"></span></a>
+            {% endif %}
+            </p>
+          </div>
           <tr>
             <th>Name</th>
             <td>{{ qualifiername.name }}</td>
