--- a/app/rnames_app/templates/reference_detail.html
+++ b/app/rnames_app/templates/reference_detail.html
@@ -6,13 +6,17 @@
 </header>
 <!-- Write your comments here -->
 <section class="w3-section">
-  {% if user.is_authenticated %}
-    <a href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-    <a href="{% url 'reference-delete' pk=reference.pk %}"><span class="fa  fa-trash-o"></span></a>
-  {% endif %}
   <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
   <table class="w3-table-all">
-    <h1>Reference #{{ reference.id }}</h1>
+    <div>
+      <h1 class="w3-left">Reference #{{ reference.id }}</h1>
+      <p class="w3-right icons">
+        {% if user.is_authenticated %}
+          <a href="{% url 'reference-edit' pk=reference.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'reference-delete' pk=reference.pk %}"><span class="fa  fa-trash-o"></span></a>
+        {% endif %}
+      </p>
+    </div>
     <tr>
       <th>First Author</th>
       <td>{{ reference.first_author }}</td>
