--- a/app/rnames_app/templates/structuredname_detail.html
+++ b/app/rnames_app/templates/structuredname_detail.html
@@ -6,16 +6,20 @@
 </header>
 <!-- Write your comments here -->
 <section class="w3-section">
-  {% if user.is_authenticated %}
-  <a href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-  <a href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
-  {% endif %}
   <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
   <header style="display:none;">
     <h2>RNames - Structured Name: {{ structuredname.id }}</h2>
   </header>
   <table class="w3-table-all">
-    <h1>Structured Name: {{ structuredname.id }}</h1>
+    <div>
+      <h1 class="w3-left">Structured Name: {{ structuredname.id }}</h1>
+      <p class="w3-right icons">
+        {% if user.is_authenticated %}
+          <a href="{% url 'structuredname-edit' pk=structuredname.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+          <a href="{% url 'structuredname-delete' pk=structuredname.pk %}"><span class="fa  fa-trash-o"></span></a>
+        {% endif %}
+      </p>
+    </div>
     <tr>
       <th>Name</th>
       <td>{{ structuredname.name }}</td>
