--- a/app/rnames_app/templates/timeslice_detail.html
+++ b/app/rnames_app/templates/timeslice_detail.html
@@ -5,16 +5,20 @@
 <!-- Write your comments here -->
 <article>
     <div class="timeslice">
-        {% if user.is_authenticated %}
-          <a class="btn btn-default" href="{% url 'timeslice-edit' pk=timeslice.pk %}"><span class="fa fa-pencil-square-o"></span></a>
-          <a class="btn btn-default" href="{% url 'timeslice-delete' pk=timeslice.pk %}"><span class="fa  fa-trash-o"></span></a>
-        {% endif %}
         <p><button type="button" class="w3-button w3-border w3-light-grey" onClick="javascript:history.back();" style="width:120px"><i class="fas fa-angle-double-left"></i>&nbsp;Go back</button></p>
         <header class="w3-hide">
             <h2>RNames - Time Slice: {{ timeslice.id }}</h2>
          </header>
         <table class="w3-table-all">
-          <h1>Time Slice: {{ timeslice.id }}</h1>
+          <div>
+            <h1 class="w3-left">Time Slice: {{ timeslice.id }}</h1>
+            <p class="w3-right icons">
+              {% if user.is_authenticated %}
+                <a class="btn btn-default" href="{% url 'timeslice-edit' pk=timeslice.pk %}"><span class="fa fa-pencil-square-o"></span></a>
+                <a class="btn btn-default" href="{% url 'timeslice-delete' pk=timeslice.pk %}"><span class="fa  fa-trash-o"></span></a>
+              {% endif %}
+            </p>
+          </div>
           <tr>
             <th>Scheme</th>
             <td>{{ timeslice.scheme }}</td>
