--- a/app/rnames_app/templates/base_generic.html
+++ b/app/rnames_app/templates/base_generic.html
@@ -155,6 +155,14 @@
     margin-left:250px;
   }
 
+  .main-content .icons {
+    padding: 10px 0px;
+  }
+
+  .main-content .icons .fa-trash-o {
+    padding-left: 5px;
+  }
+
   .content {
     margin: auto;
     max-width: 900px;
