--- a/app/rnames_app/templates/wizard_result.html
+++ b/app/rnames_app/templates/wizard_result.html
@@ -56,7 +56,7 @@
 
 {% if structured_names|length > 0 %}
   <h3>Added Structured Names</h3>
-  <table class="w3-table-all">
+  <table class="w3-table-all" style="table-layout: fixed; width: 100%">
     <tr>
       <th>id</th>
       <th>Name</th>
@@ -70,7 +70,7 @@
         <td>{{name.name}}</td>
         <td>{{name.qualifier}}</td>
         <td>{{name.location}}</td>
-        <td>{{name.remarks}}</td>
+        <td style="word-wrap: break-word;">{{name.remarks}}</td>
       </tr>
     {% endfor %}
   </table>
